Client-Unity/Assets/Scripts/Antlr4/mathParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from math.g4 by ANTLR 4.7

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7")]
[System.CLSCompliant(false)]
public partial class mathParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		WS=25, ID=26, NUM=27, INT=28, DOUBLE=29;
	public const int
		RULE_prog = 0, RULE_term = 1, RULE_factor = 2, RULE_expr = 3, RULE_equ = 4, 
		RULE_pi = 5, RULE_e = 6, RULE_constant = 7, RULE_logarithm = 8, RULE_log = 9, 
		RULE_ln = 10, RULE_trig = 11, RULE_sin = 12, RULE_cos = 13, RULE_tan = 14, 
		RULE_sinh = 15, RULE_cosh = 16, RULE_tanh = 17, RULE_arcsin = 18, RULE_arccos = 19, 
		RULE_arctan = 20, RULE_arcsinh = 21, RULE_arccosh = 22, RULE_arctanh = 23;
	public static readonly string[] ruleNames = {
		"prog", "term", "factor", "expr", "equ", "pi", "e", "constant", "logarithm", 
		"log", "ln", "trig", "sin", "cos", "tan", "sinh", "cosh", "tanh", "arcsin", 
		"arccos", "arctan", "arcsinh", "arccosh", "arctanh"
	};

	private static readonly string[] _LiteralNames = {
		null, "'('", "')'", "'^'", "'+'", "'-'", "'/'", "'*'", "'='", "'(pi)'", 
		"'e'", "'log'", "'ln'", "'sen'", "'cos'", "'tan'", "'senh'", "'cosh'", 
		"'tanh'", "'arcsen'", "'arccos'", "'arctan'", "'arcsenh'", "'arccosh'", 
		"'arctanh'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "WS", "ID", "NUM", "INT", "DOUBLE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "math.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static mathParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public mathParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public mathParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class ProgContext : ParserRuleContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public EquContext equ() {
			return GetRuleContext<EquContext>(0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prog; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ImathVisitor<TResult> typedVisitor = visitor as ImathVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProg(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgContext prog() {
		ProgContext _localctx = new ProgContext(Context, State);
		EnterRule(_localctx, 0, RULE_prog);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 50;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
			case 1:
				{
				State = 48; expr(0);
				}
				break;
			case 2:
				{
				State = 49; equ();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TermContext : ParserRuleContext {
		public ITerminalNode NUM() { return GetToken(mathParser.NUM, 0); }
		public ConstantContext constant() {
			return GetRuleContext<ConstantContext>(0);
		}
		public TrigContext trig() {
			return GetRuleContext<TrigContext>(0);
		}
		public LogarithmContext logarithm() {
			return GetRuleContext<LogarithmContext>(0);
		}
		public ITerminalNode ID() { return GetToken(mathParser.ID, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public TermContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_term; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ImathVisitor<TResult> typedVisitor = visitor as ImathVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTerm(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TermContext term() {
		TermContext _localctx = new TermContext(Context, State);
		EnterRule(_localctx, 2, RULE_term);
		try {
			State = 61;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 52; Match(NUM);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 53; constant();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 54; trig();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 55; logarithm();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 56; Match(ID);
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 57; Match(T__0);
				State = 58; expr(0);
				State = 59; Match(T__1);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FactorContext : ParserRuleContext {
		public TermContext term() {
			return GetRuleContext<TermContext>(0);
		}
		public FactorContext factor() {
			return GetRuleContext<FactorContext>(0);
		}
		public FactorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_factor; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ImathVisitor<TResult> typedVisitor = visitor as ImathVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFactor(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FactorContext factor() {
		FactorContext _localctx = new FactorContext(Context, State);
		EnterRule(_localctx, 4, RULE_factor);
		try {
			State = 71;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 63; term();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 64; term();
				State = 65; Match(T__2);
				State = 66; factor();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 68; term();
				State = 69; factor();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExprContext : ParserRuleContext {
		public FactorContext factor() {
			return GetRuleContext<FactorContext>(0);
		}
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expr; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ImathVisitor<TResult> typedVisitor = visitor as ImathVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExprContext expr() {
		return expr(0);
	}

	private ExprContext expr(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		ExprContext _localctx = new ExprContext(Context, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 6;
		EnterRecursionRule(_localctx, 6, RULE_expr, _p);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 77;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__0:
			case T__8:
			case T__10:
			case T__11:
			case T__12:
			case T__13:
			case T__14:
			case T__15:
			case T__16:
			case T__17:
			case T__18:
			case T__19:
			case T__20:
			case T__21:
			case T__22:
			case T__23:
			case ID:
			case NUM:
				{
				State = 74; factor();
				}
				break;
			case T__3:
			case T__4:
				{
				State = 75;
				_la = TokenStream.LA(1);
				if ( !(_la==T__3 || _la==T__4) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 76; expr(4);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			Context.Stop = TokenStream.LT(-1);
			State = 90;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 88;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
					case 1:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_expr);
						State = 79;
						if (!(Precpred(Context, 3))) throw new FailedPredicateException(this, "Precpred(Context, 3)");
						State = 80; Match(T__5);
						State = 81; expr(4);
						}
						break;
					case 2:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_expr);
						State = 82;
						if (!(Precpred(Context, 2))) throw new FailedPredicateException(this, "Precpred(Context, 2)");
						State = 83; Match(T__6);
						State = 84; expr(3);
						}
						break;
					case 3:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_expr);
						State = 85;
						if (!(Precpred(Context, 1))) throw new FailedPredicateException(this, "Precpred(Context, 1)");
						State = 86;
						_la = TokenStream.LA(1);
						if ( !(_la==T__3 || _la==T__4) ) {
						ErrorHandler.RecoverInline(this);
						}
						else {
							ErrorHandler.ReportMatch(this);
						    Consume();
						}
						State = 87; expr(2);
						}
						break;
					}
					} 
				}
				State = 92;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class EquContext : ParserRuleContext {
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public EquContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_equ; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ImathVisitor<TResult> typedVisitor = visitor as ImathVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEqu(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EquContext equ() {
		EquContext _localctx = new EquContext(Context, State);
		EnterRule(_localctx, 8, RULE_equ);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 93; expr(0);
			State = 94; Match(T__7);
			State = 95; expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PiContext : ParserRuleContext {
		public PiContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pi; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ImathVisitor<TResult> typedVisitor = visitor as ImathVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPi(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PiContext pi() {
		PiContext _localctx = new PiContext(Context, State);
		EnterRule(_localctx, 10, RULE_pi);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 97; Match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EContext : ParserRuleContext {
		public EContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_e; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ImathVisitor<TResult> typedVisitor = visitor as ImathVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitE(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EContext e() {
		EContext _localctx = new EContext(Context, State);
		EnterRule(_localctx, 12, RULE_e);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 99; Match(T__0);
			State = 100; Match(T__9);
			State = 101; Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConstantContext : ParserRuleContext {
		public PiContext pi() {
			return GetRuleContext<PiContext>(0);
		}
		public EContext e() {
			return GetRuleContext<EContext>(0);
		}
		public ConstantContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_constant; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ImathVisitor<TResult> typedVisitor = visitor as ImathVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConstant(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConstantContext constant() {
		ConstantContext _localctx = new ConstantContext(Context, State);
		EnterRule(_localctx, 14, RULE_constant);
		try {
			State = 105;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__8:
				EnterOuterAlt(_localctx, 1);
				{
				State = 103; pi();
				}
				break;
			case T__0:
				EnterOuterAlt(_localctx, 2);
				{
				State = 104; e();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LogarithmContext : ParserRuleContext {
		public LogContext log() {
			return GetRuleContext<LogContext>(0);
		}
		public LnContext ln() {
			return GetRuleContext<LnContext>(0);
		}
		public LogarithmContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_logarithm; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ImathVisitor<TResult> typedVisitor = visitor as ImathVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLogarithm(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LogarithmContext logarithm() {
		LogarithmContext _localctx = new LogarithmContext(Context, State);
		EnterRule(_localctx, 16, RULE_logarithm);
		try {
			State = 109;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__10:
				EnterOuterAlt(_localctx, 1);
				{
				State = 107; log();
				}
				break;
			case T__11:
				EnterOuterAlt(_localctx, 2);
				{
				State = 108; ln();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LogContext : ParserRuleContext {
		public ITerminalNode INT() { return GetToken(mathParser.INT, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public LogContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_log; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ImathVisitor<TResult> typedVisitor = visitor as ImathVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLog(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LogContext log() {
		LogContext _localctx = new LogContext(Context, State);
		EnterRule(_localctx, 18, RULE_log);
		try {
			State = 126;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,8,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 111; Match(T__10);
				State = 112; Match(INT);
				State = 113; Match(T__0);
				State = 114; expr(0);
				State = 115; Match(T__1);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 117; Match(T__10);
				State = 118; Match(T__0);
				State = 119; expr(0);
				State = 120; Match(T__1);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 122; Match(T__10);
				State = 123; Match(T__0);
				State = 124; Match(T__9);
				State = 125; Match(T__1);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LnContext : ParserRuleContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public LnContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ln; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ImathVisitor<TResult> typedVisitor = visitor as ImathVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLn(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LnContext ln() {
		LnContext _localctx = new LnContext(Context, State);
		EnterRule(_localctx, 20, RULE_ln);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 128; Match(T__11);
			State = 129; Match(T__0);
			State = 130; expr(0);
			State = 131; Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TrigContext : ParserRuleContext {
		public SinContext sin() {
			return GetRuleContext<SinContext>(0);
		}
		public SinhContext sinh() {
			return GetRuleContext<SinhContext>(0);
		}
		public ArcsinContext arcsin() {
			return GetRuleContext<ArcsinContext>(0);
		}
		public ArcsinhContext arcsinh() {
			return GetRuleContext<ArcsinhContext>(0);
		}
		public CosContext cos() {
			return GetRuleContext<CosContext>(0);
		}
		public CoshContext cosh() {
			return GetRuleContext<CoshContext>(0);
		}
		public ArccosContext arccos() {
			return GetRuleContext<ArccosContext>(0);
		}
		public ArccoshContext arccosh() {
			return GetRuleContext<ArccoshContext>(0);
		}
		public TanContext tan() {
			return GetRuleContext<TanContext>(0);
		}
		public TanhContext tanh() {
			return GetRuleContext<TanhContext>(0);
		}
		public ArctanContext arctan() {
			return GetRuleContext<ArctanContext>(0);
		}
		public ArctanhContext arctanh() {
			return GetRuleContext<ArctanhContext>(0);
		}
		public TrigContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_trig; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ImathVisitor<TResult> typedVisitor = visitor as ImathVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTrig(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TrigContext trig() {
		TrigContext _localctx = new TrigContext(Context, State);
		EnterRule(_localctx, 22, RULE_trig);
		try {
			State = 145;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__12:
				EnterOuterAlt(_localctx, 1);
				{
				State = 133; sin();
				}
				break;
			case T__15:
				EnterOuterAlt(_localctx, 2);
				{
				State = 134; sinh();
				}
				break;
			case T__18:
				EnterOuterAlt(_localctx, 3);
				{
				State = 135; arcsin();
				}
				break;
			case T__21:
				EnterOuterAlt(_localctx, 4);
				{
				State = 136; arcsinh();
				}
				break;
			case T__13:
				EnterOuterAlt(_localctx, 5);
				{
				State = 137; cos();
				}
				break;
			case T__16:
				EnterOuterAlt(_localctx, 6);
				{
				State = 138; cosh();
				}
				break;
			case T__19:
				EnterOuterAlt(_localctx, 7);
				{
				State = 139; arccos();
				}
				break;
			case T__22:
				EnterOuterAlt(_localctx, 8);
				{
				State = 140; arccosh();
				}
				break;
			case T__14:
				EnterOuterAlt(_localctx, 9);
				{
				State = 141; tan();
				}
				break;
			case T__17:
				EnterOuterAlt(_localctx, 10);
				{
				State = 142; tanh();
				}
				break;
			case T__20:
				EnterOuterAlt(_localctx, 11);
				{
				State = 143; arctan();
				}
				break;
			case T__23:
				EnterOuterAlt(_localctx, 12);
				{
				State = 144; arctanh();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SinContext : ParserRuleContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public SinContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sin; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ImathVisitor<TResult> typedVisitor = visitor as ImathVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSin(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SinContext sin() {
		SinContext _localctx = new SinContext(Context, State);
		EnterRule(_localctx, 24, RULE_sin);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 147; Match(T__12);
			State = 148; Match(T__0);
			State = 149; expr(0);
			State = 150; Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CosContext : ParserRuleContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public CosContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_cos; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ImathVisitor<TResult> typedVisitor = visitor as ImathVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCos(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CosContext cos() {
		CosContext _localctx = new CosContext(Context, State);
		EnterRule(_localctx, 26, RULE_cos);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 152; Match(T__13);
			State = 153; Match(T__0);
			State = 154; expr(0);
			State = 155; Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TanContext : ParserRuleContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public TanContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tan; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ImathVisitor<TResult> typedVisitor = visitor as ImathVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTan(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TanContext tan() {
		TanContext _localctx = new TanContext(Context, State);
		EnterRule(_localctx, 28, RULE_tan);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 157; Match(T__14);
			State = 158; Match(T__0);
			State = 159; expr(0);
			State = 160; Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
